chore(logging): add missing messages and improve existing exception ones